# BedrockStack

./: .gitignore  Cargo.toml  build_image.py  create_image.py  deploy_usb.bat  fullrun.bat  fullrun.py  naut.py  run.bat  rust-toolchain.toml
kernel/: Cargo.toml  linker-riscv64.ld  linker.ld  target-riscv64.json  target.json
kernel/src/: acpi_log.rs  boot.rs  dtb.rs  lib.rs  main.rs
kernel/src/acpi/: fadt.rs  gas.rs  interrupt.rs  madt.rs  mcfg.rs  mod.rs  platform.rs  tables.rs
kernel/src/arch/: mod.rs
kernel/src/arch/riscv64/: mod.rs  paging.rs  sbi.rs  serial.rs  time.rs  trampoline.rs  trap.rs
kernel/src/arch/x86_64/: apic.rs  gdt.rs  idt.rs  limiter.rs  mod.rs  multiboot2.rs  multiboot2_header.s  paging.rs  serial.rs  trampoline.rs
kernel/src/display/: console.rs  framebuffer.rs  mod.rs
kernel/src/drivers/: ahci.rs  mod.rs  serial.rs  traits.rs
kernel/src/filesystems/: mod.rs
kernel/src/filesystems/blockdriver/: ahci.rs  block_cache.rs  dma.rs  driver.rs  mod.rs  traits.rs
kernel/src/filesystems/fstypes/: fat32.rs  mod.rs  tmpfs.rs
kernel/src/filesystems/partition/: gpt.rs  mbr.rs  mod.rs
kernel/src/filesystems/vfs/: dentry.rs  drive.rs  error.rs  fdtable.rs  file.rs  inode.rs  irq.rs  mod.rs  mount.rs  path.rs  (+2 more)
kernel/src/kerneldump/: disasm.rs  dump.rs  mod.rs
kernel/src/mm/: heap.rs  mod.rs  phys_alloc.rs  virt_mem.rs
kernel/src/module/: fat32_test.rs  mod.rs  msix_test.rs  registry.rs  vfs_test.rs
kernel/src/pci/: bar.rs  caps.rs  ecam.rs  enumerate.rs  mod.rs  msi.rs  msix.rs
kernel/src/platform/: mod.rs
kernel/src/smp/: mod.rs
(+54 files in other folders)
