[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[features]
cpu_slow = []
display_log = []
kernelmb2 = []

[dependencies]
spin = "0.9"
log = "0.4"
common = { path = "../common" }
framebuffer = { path = "../graphics/Framebuffer", features = ["scrollback"] }
hashbrown = "0.14"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.15"

